changed the image

--- a/templates/index.html
+++ b/templates/index.html
@@ -61,7 +61,7 @@
       {% for i in message %}
       {% if i == "Cancerous" %}
       <div class="card mt-5">
-        <img src="{{url_for('static', filename='Designer (1).png')}}" class="card-img-top" alt="Cancerous Tumor">
+        <img src="{{url_for('static', filename='Cancerous.jpg')}}" class="card-img-top" alt="Cancerous Tumor">
         <div class="card-body">
           <h5 class="card-title text-danger">Cancerous</h5>
           <p class="card-text">The tumor is malignant (M).</p>
